<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        android:padding="20dp" >

        <TextView
            android:id="@+id/tv_add_an_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_an_expense"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_accent_color_bg"
            android:padding="10dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_enter_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/enter_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_expense_amount"
            app:layout_constraintBottom_toBottomOf="@id/et_expense_amount" />

        <EditText
            android:id="@+id/et_expense_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/tv_enter_expense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_an_expense"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_enter_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/enter_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_expense_details"
            app:layout_constraintBottom_toBottomOf="@id/et_expense_details" />

        <EditText
            android:id="@+id/et_expense_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/tv_enter_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_expense_amount"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_enter_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/enter_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_expense_category"
            app:layout_constraintBottom_toBottomOf="@id/et_expense_category" />

        <EditText
            android:id="@+id/et_expense_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/tv_enter_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_expense_details"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_expense_d"
            app:layout_constraintBottom_toBottomOf="@id/et_expense_d" />

        <EditText
            android:id="@+id/et_expense_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mm_dd_yy"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/tv_select_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_expense_category"
            android:importantForAutofill="no"
            android:inputType="none"
            android:enabled="false" />

        <Button
            android:id="@+id/btn_add_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_expense"
            android:backgroundTint="@color/accent_color"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_expense_d"
            app:layout_constraintBottom_toTopOf="@id/btn_view_expense"/>

        <Button
            android:id="@+id/btn_view_expense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_expenses"
            android:backgroundTint="@color/accent_color"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_view_summary"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_view_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/view_summary"
            android:backgroundTint="@color/accent_color"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/btn_view_expense"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btn_view_expense" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>