<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        tools:context=".fragments.ExpenseSummaryFragment">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_accent_color_bg"
            app:layout_constraintStart_toStartOf="@id/tb_table"
            app:layout_constraintEnd_toEndOf="@id/tb_table"
            app:layout_constraintTop_toTopOf="@id/tb_table"
            app:layout_constraintBottom_toBottomOf="@id/tb_table" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_accent_color_bg"
            app:layout_constraintStart_toStartOf="@id/tv_total_expense"
            app:layout_constraintEnd_toEndOf="@id/tv_total_expense"
            app:layout_constraintTop_toTopOf="@id/tv_total_expense"
            app:layout_constraintBottom_toBottomOf="@id/tv_total_expense" />

        <TableLayout
            android:id="@+id/tb_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:text="@string/category"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="5dp"
                    android:text="@string/expense"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:text="@string/needs"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_needs_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="5dp"
                    tools:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:text="@string/wants"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_wants_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="5dp"
                    tools:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:text="@string/investments"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_investment_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="5dp"
                    tools:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:padding="5dp"
                    android:text="@string/others"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_others_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:padding="5dp"
                    tools:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/tv_total_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Total Expense"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_table"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/iv_go_back"
            android:layout_width="19dp"
            android:layout_height="23dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>